# HydraLLM

./: .env.example  .gitignore  AGENTS.ko.md  ARCH_REVIEW.ko.md  ARCH_REVIEW.md  CHANGELOG.md  CONTRIBUTING.ko.md  CONTRIBUTING.md  DEPLOYMENT.ko.md  DEPLOYMENT.md  DISCLAIMER.ko.md  DISCLAIMER.md  Dockerfile  IMPROVEMENTS.ko.md  IMPROVEMENTS.md  LICENSE  README.ko.md  README.md  SPEC.ko.md  SPEC.md  STATUS.ko.md  STATUS.md  TROUBLESHOOTING.ko.md  TROUBLESHOOTING.md  main.py  pyproject.toml  requirements.txt  setup.py  test_realtime_data.py
archive/: patch_20260420_ui_regression_and_privacy.md
data/: web_keywords.en.json  web_keywords.ko.json
examples/: README.md  async_example.py  curl_examples.sh  python_sdk_example.py  quick_test.py
samples/: README.md  complex_query_request.json  long_context_request.json  multimodal_request.json  simple_request.json
scripts/: analyze_logs.py  check_imports.py  discover_gemini.py  isolated_test.ps1  isolated_test.sh  probe_gemini_access.py  run_final_test.py  validate_flow.py
src/: app.py
src/adapters/providers/: cerebras.py  gemini.py  (+2 more)
src/core/: config.py  container.py  exceptions.py  logging.py
src/domain/: enums.py  interfaces.py  models.py  schemas.py
src/i18n/: __init__.py  en.json  ko.json
src/services/: admin_service.py  analyzer.py  circuit_breaker.py  comm_logger.py  compressor.py  context_manager.py  gateway.py  installer.py  intent_classifier.py  key_manager.py  keyword_store.py  metrics_service.py  observability.py  router.py  scraper.py  session_manager.py  session_orchestrator.py  web_context_service.py
src/utils/: ulid.py
static/: admin.html  index.html
static/i18n/: en.json  ko.json
tests/: conftest.py  test_prompts.json
tests/api/: test_api.py  test_intent_keywords_endpoints.py
tests/integration/: test_auto_models.py  test_auto_models_functionality.py  test_auto_provider_validation.py  test_date_priority.py  test_gateway_auto_mapping.py  test_gateway_model_switch_continuity.py  test_gateway_provider_fallback.py  test_integration.py  test_web_context_injection_log.py  test_web_fetch.py
tests/unit/: test_analyzer.py  test_gemini_adapter.py  test_key_manager.py  test_keyword_store.py  test_openai_compat_adapter.py  test_prompt_optimization.py  test_session_manager_v2.py  test_stability.py  test_ulid.py
(+8 files in other folders)
